# statesman

./: .gitignore  pyproject.toml  statesman.py  statesman_test.py
.github/workflows/: release.yml  test.yaml
